tests/NormalTests/paczka1/small_fuzzy/19523010.err
Error in line 7: uXRyiI S991 40,7
Error in line 6: whwZ2B5 S184 31,8
